# voigtfit

./: LICENCE.txt  LICENSE  pyproject.toml  readme.md  setup.py
.ipynb_checkpoints/: readme-checkpoint.md
notebooks/: demo_voigtfit.ipynb
notebooks/.ipynb_checkpoints/: demo_voigtfit-checkpoint.ipynb
sample_data/: sample_data_with_emission.csv  sample_data_without_emission.csv
tests/: test_fitting.py
voigtfit/: __init__.py  fitting.py
voigtfit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
